[package]
name = "MTLauncher"
version = "0.0.5"
description = "Alternative Minetest Launcher"
authors = ["recluse4615"]
license = "LGPL-2.0-only"
repository = "https://github.com/minetest-world/mtlauncher"
default-run = "MTLauncher"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-all", "fs-copy-file", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-rename-file", "fs-write-file", "http-request", "os-all", "path-all", "protocol-asset", "shell-execute", "shell-open"] }
reqwest = { version = "0.11"}
zip = "*"
zip-extensions = "*"

[dependencies.tauri-plugin-fs-watch]
git = "https://github.com/tauri-apps/tauri-plugin-fs-watch"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
